--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # YOUR NAME OR TITLE OF YOUR SITE
-name: Harsh Trivedi
+name: Soumyadeep Dey
 
 # YOUR BRAND/PERSONAL TAGLINE
-tagline: Howdy, I'm Harsh Trivedi. I'm a passionate Tech Lover from Kanpur, apart from that I'm a Graphic Designer and an OpenSource enthusiast Inspired by Imagination.
+tagline: Howdy, I'm Soumyadeep Dey. I'm a passionate Tech Lover from Kolkata.
 
 # YOUR/BRAND IMAGE URL
-Image_URL: https://github.com/harsh98trivedi.png
+Image_URL: https://github.com/SoumyaEXE.png
 
 # CHANGE THE BACKGROUND IMAGE OF THE WEBSITE BY JUST ADDING THE IMAGE URL
 Cover_Image: https://picsum.photos/1080?nocache=
@@ -18,28 +18,28 @@ links:
     # FACEBOOK
   - Name: Facebook
     URL: https://www.facebook.com
-    Username: harsh98trivedi
+    Username: iSoumyadeepDey
     Color: '#3b5998'
     Icon-Class: fab fa-facebook
 
     # INSTAGRAM
   - Name: Instagram
     URL: https://www.instagram.com
-    Username: harsh98trivedi
+    Username: s0umy4_xd
     Color: '#DD2A7B'
     Icon-Class: fab fa-instagram
 
     # TWITTER
   - Name: Twitter
     URL: https://twitter.com
-    Username: harsh98trivedi
+    Username: iSoumyadeepDey
     Color: '#1DA1F2'
     Icon-Class: fab fa-twitter
 
      # THREADS.NET
   - Name: Threads
     URL: https://threads.net/
-    Username: harsh98trivedi
+    Username: s0umy4_xd
     Color: '#000000'
     Icon-Class: fa-brands fa-threads
     Text_Color: '#ffffff'
@@ -47,14 +47,14 @@ links:
     # CLUBHOUSE
   - Name: Clubhouse
     URL: https://www.clubhouse.com
-    Username: '@harsh98trivedi'
+    Username: '@'
     Color: '#f1c40f'
     Icon-Class: fas fa-hand-paper -mt-0.5
     
     # LINKEDIN
   - Name: LinkedIn
     URL: https://www.linkedin.com/in
-    Username: harsh98trivedi
+    Username: iSoumyadeepDey
     Color: '#2867B2'
     Icon-Class: fab fa-linkedin-in
 
@@ -68,21 +68,21 @@ links:
     # GITHUB
   - Name: GitHub
     URL: http://github.com
-    Username: harsh98trivedi
+    Username: SoumyaEXE
     Color: '#6e5494'
     Icon-Class: fab fa-github
 
     # WordPress
   - Name: WordPress.org
     URL: 'https://profiles.wordpress.org'
-    Username: harsh98trivedi
+    Username: iSoumyadeepDey
     Icon-Class: fa-brands fa-wordpress-simple
     Color: '#0073AA'
     Text_Color: '#ffffff'
 
     # EMAIL
   - Name: Email
-    URL: 'mailto:harshtrivedi@duck.com'
+    URL: 'mailto:soulsoumya1234@gmail.com'
     Icon-Class: fas fa-envelope
     Color: '#e17055'
     Text_Color: '#ffffff'
@@ -98,7 +98,7 @@ links:
     # TWITCH
   - Name: Twitch
     URL: 'https://twitch.tv'
-    Username: harsh98trivedi
+    Username: SoumyadeepDey
     Icon-Class: fab fa-twitch
     Color: '#9147fe'
     Text_Color: '#ffffff'
@@ -106,7 +106,7 @@ links:
     # VIMEO
   - Name: Vimeo
     URL: 'https://vimeo.com'
-    Username: harshtrivedi
+    Username: SoumyadeepDey
     Icon-Class: fab fa-vimeo-v
     Color: '#1ab7ea'
     Text_Color: '#ffffff'
@@ -114,14 +114,14 @@ links:
     # MESSENGER
   - Name: Messenger
     URL: https://m.me
-    Username: theharshtrivedi
+    Username: iSoumyadeepDey
     Color: '#006AFF'
     Icon-Class: fab fa-facebook-messenger
 
     # Cal.com
   - Name: Cal.com
     URL: https://cal.com
-    Username: harshtrivedi
+    Username: SoumyadeepDey
     Color: '#888888'
     Icon-Class: fa fa-calendar-check
     Text_Color: '#ffffff'
@@ -129,7 +129,7 @@ links:
     # REDDIT
   - Name: Reddit
     URL: http://reddit.com/u
-    Username: harshtrivedi
+    Username: SoumyadeepDey
     Color: '#FF4500'
     Icon-Class: fab fa-reddit-alien
 
@@ -143,14 +143,14 @@ links:
     # TELEGRAM
   - Name: Telegram
     URL: http://telegram.me
-    Username: theharshtrivedi
+    Username: SoumyadeepDey
     Color: '#0088cc'
     Icon-Class: fab fa-telegram-plane
 
     # SNAPCHAT
   - Name: Snapchat
     URL: https://www.snapchat.com/add
-    Username: 'harsh98trivedi'
+    Username: 'iSoumyadeepDey'
     Color: '#FFFC00'
     Text_Color: '#000000'
     Icon-Class: fab fa-snapchat-ghost
@@ -158,7 +158,7 @@ links:
     # STEAM
   - Name: Steam
     URL: https://steamcommunity.com/id
-    Username: 'harshtrivedi'
+    Username: 'iSoumyadeepDey'
     Color: '#66c0f4'
     Text_Color: '#000000'
     Icon-Class: fab fa-steam
@@ -174,14 +174,14 @@ links:
     # PINTEREST
   - Name: Pinterest
     URL: https://pinterest.com
-    Username: 'harsh98trivedi'
+    Username: 'iSoumyadeepDey'
     Color: '#E60023'
     Icon-Class: fab fa-pinterest
 
     # BEHANCE
   - Name: Behance
     URL: https://www.behance.net
-    Username: harsh98trivedi
+    Username: SoumyadeepDey
     Color: '#1769ff'
     Icon-Class: fab fa-behance
 
@@ -195,7 +195,7 @@ links:
     # DEVIANTART
   - Name: DeviantArt
     URL: https://www.deviantart.com
-    Username: harshtrivedi
+    Username: SoumyadeepDey
     Icon-Class: fab fa-deviantart
     Color: '#05CC46'
     Text_Color: '#ffffff'
@@ -203,7 +203,7 @@ links:
     # FIGMA
   - Name: Figma
     URL: https://www.figma.com
-    Username: '@harshtrivedi'
+    Username: '@iSoumyadeepDey'
     Icon-Class: fab fa-figma
     Color: '#ff2865'
     Text_Color: '#ffffff'
@@ -218,7 +218,7 @@ links:
     # SOUNDCLOUD
   - Name: SoundCloud
     URL: https://www.soundcloud.com
-    Username: harsh98trivedi
+    Username: iSoumyadeepDey
     Color: '#FE5000'
     Icon-Class: fab fa-soundcloud
 
@@ -238,7 +238,7 @@ links:
     # MEDIUM
   - Name: Medium
     URL: 'https://medium.com'
-    Username: '@harsh98trivedi'
+    Username: '@SoumyadeepDey'
     Icon-Class: fab fa-medium-m
     Color: '#00ab6c'
     Text_Color: '#ffffff'
@@ -246,7 +246,7 @@ links:
     # DEV.TO
   - Name: Dev.to
     URL: 'https://dev.to'
-    Username: harsh98trivedi
+    Username: SoumyadeepDey
     Icon-Class: fab fa-dev
     Color: '#ffffff'
     Text_Color: '#000000'
@@ -261,20 +261,20 @@ links:
   # BUY ME A COFFEE
   - Name: BuyMeACoffee
     URL: 'https://buymeacoffee.com'
-    Username: harshtrivedi
+    Username: SoumyadeepDey
     Icon-Class: fas fa-mug-hot
     Color: '#FFDD00'
     Text_Color: '#000000'
 
     # CUSTOM LINK
   - Name: Blog
-    URL: https://harsh98trivedi.github.io/blog
+    URL: https://SoumyaEXE.github.io/blog
     Icon-Class: fas fa-link
     Color: '#ffb142'
     Text_Color: '#ffffff'
 
   - Name: Links
-    URL: https://github.com/harsh98trivedi/links
+    URL: https://github.com/SoumyaEXE/Soumyainks
     Icon-Class: fas fa-link
     Color: '#d94869'
     Text_Color: '#ffffff'
